# vless-shopbot

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_template.md
bot/: handlers.py  keyboards.py
data_manager/: database.py  scheduler.py
modules/: otp.py  xui_api.py
src/shop_bot/: __main__.py  bot_controller.py  config.py
src/shop_bot/bot/: admin_handlers.py  handlers.py  keyboards.py  middlewares.py  support_handlers.py
src/shop_bot/data_manager/: database.py  scheduler.py
src/shop_bot/modules/: otp.py  xui_api.py
src/shop_bot/webhook_server/: app.py
src/shop_bot/webhook_server/static/css/: style.css
src/shop_bot/webhook_server/static/js/: script.js
src/shop_bot/webhook_server/templates/: base.html  dashboard.html  settings.html
src/static/css/: style.css
src/templates/: dashboard.html  login.html  settings.html  users.html
webhook_server/: app.py
